--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@
 /*首页*/
 /*header部分*/
 .header_father{
-    width: 100%;
     height: 1.25rem;
     margin:0 auto;
 }
@@ -72,17 +71,13 @@ header a span{
 /*轮播图*/
 .lun{
     width: 10rem;
-    height: 5.5rem;
+    height: 4.8rem;
     margin:0 auto;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
 }
 .lun img{
     width: 10rem;
-    height: 5.5rem;
-}
-.swiper-pagination span{
-    width: 0.2rem;
-    height: 0.2rem;
+    height: 4.8rem;
 }
 /*mainer部分*/
 .mainer{
@@ -91,433 +86,230 @@ header a span{
 }
 /*mainer1部分*/
 .mainer1{
-    width: 10rem;
-    margin-bottom: 0.5rem;
-}
-/*mainer1_one部分*/
-.one{
-    width: 10rem;
-    height: 0.9rem;
-    line-height: 0.775rem;
-    position: relative;
-    margin-bottom: 0.25rem;
-}
-.one .left1{
-    width: 2.2rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    left: 0;
-    top: 0.4rem;
-}
-.one .right1{
-    width: 2.2rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    right: 0;
-    top: 0.4rem;
-}
-.one h1{
-    font-size: 30px;
-    font-weight:bold;
-}
-[data-dpr="2"] .one h1{
-    font-size: 60px;
-}
-[data-dpr="3"] .one h1{
-    font-size: 90px;
-}
-.one h1.shop{
-    position: absolute;
-    left: 2.5rem;
-    top: 0;
-    height: 0.9rem;
-}
-.one h1.open{
-    position: absolute;
-    right: 2.4rem;
-    top: 0.05rem;
-    height: 0.9rem;
-}
-.one h1.open span{
-    color:#e00c09;
-}
-.one img{
-    position: absolute;
-    left: 4.6rem;
-    top: 0.35rem;
-    width: 0.15rem;
-    height: 0.15rem;
-}
-[data-dpr="2"] .one img{
-    font-size: 12px;
-}
-[data-dpr="3"] .one img{
-    font-size: 18px;
-}
-/*mainer1_two部分*/
-.mainer1_two{
-    width: 10rem;
-    text-align: center;
-    margin-bottom: 0.25rem;
-}
-.a a{
-    font-size: 17px;
-    padding:0 0.2rem 0.05rem 0.2rem;
-    border-radius:0.1rem;
-    color: #000000;
-}
-.a a:hover{
-    background: #000;
-    color: #ffffff;
-    text-decoration: none;
-}
-[data-dpr="2"] .a a{
-    font-size: 34px;
-}
-[data-dpr="3"] .a a{
-    font-size: 51px;
-}
-/*mainer1_three部分*/
-.mainer1_three{
-    width: 10rem;
-    height: 2.8rem;
-    padding:0.25rem 0;
-}
-.mainer1_three .mainer1_top{
-    width: 10rem;
-    height: 0.7rem;
-    text-align: center;
-    position: relative;
-    margin-bottom: 0.45rem;
-}
-.mainer1_three .mainer1_top span{
-    font-size: 12px;
-    background: #fd2c41;
-    padding:0 0.1rem 0.05rem 0.1rem;
-    color: #ffffff;
-    border:none;
-    margin-right: 0.3rem;
-    position: absolute;
-    left: 0.9rem;
-    top: 0.11rem;
-}
-[data-dpr="2"] .mainer1_three .mainer1_top span{
-    font-size: 24px;
-}
-[data-dpr="3"] .mainer1_three .mainer1_top span{
-    font-size: 36px;
-}
-.mainer1_three .mainer1_top a{
-    font-size: 18px;
-    color: #000000;
-    font-weight:bold;
-    position:absolute;
-    top: 0;
-    right: 1rem;
-}
-.mainer1_three .mainer1_top a:hover{
-    color: #D93030;
-}
-[data-dpr="2"]  .mainer1_three .mainer1_top a{
-    font-size: 32px;
-}
-[data-dpr="3"]  .mainer1_three .mainer1_top a{
-    font-size: 54px;
-}
-.mainer1_three .mainer1_bottom{
-    width: 10rem;
-}
-.mainer1_three .mainer1_bottom ul{
-    width: 10rem;
-    line-height:0.8rem;
-    padding-left: 1.4rem;
-}
-.mainer1_three .mainer1_bottom ul li{
-    width: 8.6rem;
-    list-style: disc;
-}
-.mainer1_three .mainer1_bottom ul a{
-    color: #000000;
-    font-size: 12px;
-}
-.mainer1_three .mainer1_bottom ul a:hover{
-    color: #024CB7;
-}
-[data-dpr="2"] .mainer1_three .mainer1_bottom ul a{
-    font-size: 24px;
-}
-[data-dpr="3"] .mainer1_three .mainer1_bottom ul a{
-    font-size: 36px;
-}
-/*mainer1_four部分*/
-.mainer1_four{
-    width: 10rem;
     height: 2rem;
-    margin-top: 0.25rem;
     padding:0 0.15rem;
+    margin-bottom: 0.25rem;
 }
-.mainer1_four ul{
+.mainer1 ul{
     width: 10rem;
     list-style: none;
 }
-.mainer1_four li{
+.mainer1 li{
     float: left;
     width: 2.3rem;
     height: 2rem;
     margin:0 0.17rem 0 0;
     position: relative;
 }
-.mainer1_four li a{
+.mainer1 li a{
     width: 100%;
     display: block;
 }
-.mainer1_four li a span{
+.mainer1 li a span{
     color: #fff;
     position: absolute;
     top: 0.7rem;
     left:0.5rem;
     font-size: 14px;
 }
-[data-dpr="2"] .mainer1_four li a span{
+[data-dpr="2"] .mainer1 li a span{
     font-size: 28px;
 }
-[data-dpr="3"] .mainer1_four li a span{
+[data-dpr="3"] .mainer1 li a span{
     font-size: 42px;
 }
-.mainer1_four li a img{
+.mainer1 li a img{
     width: 100%;
     border-radius:0.2rem;
 }
 /*mainer2部分*/
-.mainer2{
-    width: 10rem;
-    margin-bottom: 0.5rem;
-}
 /*mainer2_one部分*/
-.mainer2_one .left1{
-    width: 1.3rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    left: 0;
-    top: 0.4rem;
+.title{
+    height: 1rem;
+    padding:0.15rem 0.25rem;
+    background: #fff;
+    margin:0 auto;
 }
-.mainer2_one .right1{
-    width: 1.3rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    right: 0;
-    top: 0.4rem;
-}
-.mainer2_one h1{
-    font-size: 30px;
+.title a{
+    font-size: 16px;
+    color: #515151;
     font-weight:bold;
+    border-left:0.125rem solid #ff6600;
+    padding-left: 0.15rem;
 }
-[data-dpr="2"] .mainer2_one h1{
-    font-size: 60px;
+[data-dpr="2"] .title a{
+    font-size: 32px;
 }
-[data-dpr="3"] .mainer2_one h1{
-    font-size: 90px;
+[data-dpr="3"] .title a{
+    font-size: 48px;
 }
-.mainer2_one h1.shop{
-    position: absolute;
-    left: 1.6rem;
-    top: 0;
-    height: 0.9rem;
-}
-.mainer2_one h1.open{
-    position: absolute;
-    right: 1.6rem;
-    top: 0.05rem;
-    height: 0.9rem;
-}
-.mainer2_one h1.open span{
-    color:#e00c09;
-}
-.mainer2_one img{
-    position: absolute;
-    left: 3.7rem;
-    top: 0.35rem;
-    width: 0.15rem;
-    height: 0.15rem;
-}
-[data-dpr="2"] .mainer2_one img{
-    font-size: 12px;
-}
-[data-dpr="3"] .mainer2_one img{
-    font-size: 18px;
+.title a span{
+    margin-left: 0.4rem;
+    font-weight:normal;
+    color: #c6c6c6;
 }
 /*mainer2_two部分*/
 .mainer2_two{
-    width: 10rem;
-    text-align: center;
-    margin-bottom: 0.25rem;
+    padding:0 0.17rem 0.2rem 0.17rem;
+    background: #f5f5f5;
+    border-top: solid 1px #e8e8e8;
 }
-/*mainer2_three部分*/
-.mainer2_three{
-    width: 10rem;
-    height: 2.9rem;
-}
-.mainer2_left{
+.mainer2_two dl{
+    width: 4.7rem;
     float: left;
-    width: 4rem;
-    height: 2.9rem;
-    background: #333;
+    background: #fff;
+    margin-bottom: 0.2rem;
+    padding-bottom: 0.4rem;
 }
-.mainer2_left h3{
-    text-align: center;
-    font-size: 18px;
-    margin:0.2rem auto 0;
-    width: 3rem;
-    height: 0.8rem;
-    line-height: 0.8rem;
+.mainer2_two dl.no{
+    float: right;
 }
-.mainer2_left h3 a{
-    color: #ffffff;
-    font-weight:bold;
+.mainer2_two dl dt{
+    width: 100%;
+    padding-bottom: 0.06rem;
 }
-[data-dpr="2"] .mainer2_left h3{
+.mainer2_two dl dt img{
+    width: 100%;
+}
+.mainer2_two dl dd{
+    font-size: 14px;
+    color: #3c3c3c;
+    padding-left: 0.1rem;
+    padding-top: 0.15rem;
+}
+[data-dpr="2"] .mainer2_two dl dd{
+    font-size: 28px;
+}
+[data-dpr="3"] .mainer2_two dl dd{
+    font-size: 42px;
+}
+.mainer2_two dl dd.fg{
+    font-size: 12px;
+    color:#585858;
+}
+[data-dpr="2"] .mainer2_two dl dd.fg{
+    font-size: 24px;
+}
+[data-dpr="3"] .mainer2_two dl dd.fg{
     font-size: 36px;
 }
-[data-dpr="3"] .mainer2_left h3{
-    font-size: 54px;
-}
-.mainer2_left p{
-    width: 3rem;
-    margin:0.3rem auto 0;
-    color: rgb(148, 148, 148);
-}
-.mainer2_left p a{
-    display: block;
-    color: rgb(125, 204, 201);
-}
-.mainer2_right{
-    float: left;
-    width: 6rem;
-    height: 2.9rem;
-}
-.mainer2_right a{
-    display: block;
-    width: 100%;
-    height: 2.9rem;
-}
-.mainer2_right img{
-    width: 100%;
-    height: 2.9rem;
-}
 /*mainer3部分*/
-.mainer3{
-    width: 10rem;
-    margin-bottom: 0.5rem;
+.title1{
+    height: 1rem;
+    line-height:0.95rem;
+    margin:0.25rem;
+    text-align: center;
+    border: 1px solid #dadada;
 }
-/*mainer3_one部分*/
-.mainer3_one .left1{
-    width: 1.3rem;
-    height: 0.05rem;
-    background:#000;
+.title1 a{
+    display: inline-block;
+    width: 5rem;
+    height: 1rem;
+    color: #7a7a7a;
+    font-size: 16px;
+    position: relative;
+}
+.title1 a span{
     position: absolute;
-    left: 0;
-    top: 0.4rem;
+    top: 0.3rem;
+    right: 0rem;
 }
-.mainer3_one .right1{
-    width: 1.3rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    right: 0;
-    top: 0.4rem;
+[data-dpr="2"] .title1 a{
+    font-size: 32px;
 }
-.mainer3_one h1{
-    font-size: 30px;
-    font-weight:bold;
+[data-dpr="3"] .title1 a{
+    font-size: 48px;
 }
-[data-dpr="2"] .mainer3_one h1{
-    font-size: 60px;
+/*mainer4部分*/
+.mainer4_two{
+    padding:0.3rem 0.2rem 0.2rem;
+    background: #f5f5f5;
+    border-top: solid 1px #e8e8e8;
 }
-[data-dpr="3"] .mainer3_one h1{
-    font-size: 90px;
+.mainer4_two a{
+    color: #000000;
 }
-.mainer3_one h1.shop{
-    position: absolute;
-    left: 1.5rem;
-    top: 0;
-    height: 0.9rem;
+.mainer4_two dl{
+    width: 4.6rem;
+    height: 6.9rem;
+    background: #fff;
+    float: left;
+    padding: 0.21rem 0.25rem;
+    margin:0.2rem 0;
 }
-.mainer3_one h1.open{
-    position: absolute;
-    right: 1.5rem;
-    top: 0.05rem;
-    height: 0.9rem;
+.mainer4_two dl.no1{
+    float: right;
 }
-.mainer3_one h1.open span{
-    color:#e00c09;
+.mainer4_two dl dt img{
+    width: 100%;
 }
-.mainer3_one img{
-    position: absolute;
-    left: 5.35rem;
-    top: 0.35rem;
-    width: 0.15rem;
-    height: 0.15rem;
+.mainer4_two dl dd{
+    font-size: 16px;
+    margin-top: 0.1rem;
 }
-[data-dpr="2"] .mainer3_one img{
-    font-size: 12px;
+[data-dpr="2"] .mainer4_two dl dd{
+    font-size: 32px;
 }
-[data-dpr="3"] .mainer3_one img{
-    font-size: 18px;
+[data-dpr="3"] .mainer4_two dl dd{
+    font-size: 48px;
 }
-/*mainer3_two部分*/
-.mainer3_two{
+/*mainer5部分*/
+/*mainer6部分*/
+.mainer6{
+    margin-top: 0.4rem;
+}
+/*mainer6_one部分*/
+/*mainer6_two部分*/
+.mainer6_two{
     width: 10rem;
     height: 4.78rem;
+    margin-top: 0.4rem;
 }
-.mainer3_two img{
+.mainer6_two img{
     width: 100%;
 }
-/*mainer3_three部分*/
-.mainer3_three ul{
+/*mainer6_three部分*/
+.mainer6_three ul{
     width: 100%;
     height: 1.4rem;
     line-height: 1.4rem;
     border-bottom: 1px solid #d7d7d7;
 }
-.mainer3_three ul li{
+.mainer6_three ul li{
     float: left;
     width: 25%;
     height: 1.4rem;
     text-align: center;
 }
-.mainer3_three ul li a{
+.mainer6_three ul li a{
     font-size: 16px;
     color: #555;
     border-radius:0.3rem;
 }
-.mainer3_three ul li a.active{
+.mainer6_three ul li a.active{
     background: #555;
     color: #ffffff;
     padding:0.05rem 0.2rem 0.1rem 0.2rem;
 }
-.mainer3_three ul li a:hover{
+.mainer6_three ul li a:hover{
     text-decoration: none;
 }
-[data-dpr="2"] .mainer3_three ul li a{
+[data-dpr="2"] .mainer6_three ul li a{
     font-size: 32px;
 }
-[data-dpr="3"] .mainer3_three ul li a{
+[data-dpr="3"] .mainer6_three ul li a{
     font-size: 48px;
 }
-/*mainer3_four部分*/
-.mainer3_four{
+/*mainer6_four部分*/
+.mainer6_four{
     height: 5.6rem;
     overflow:hidden;
     padding:0 0.3rem;
 }
-.mainer3_four ul{
+.mainer6_four ul{
     width: 100%;
 }
-.mainer3_four ul li{
+.mainer6_four ul li{
     width: 100%;
     height: 1.4rem;
     line-height: 1.4rem;
@@ -527,7 +319,7 @@ header a span{
     padding-left: 0.35rem;
     white-space: nowrap;
 }
-.mainer3_four ul li a{
+.mainer6_four ul li a{
     color: #000000;
     font-size: 16px;
     width: 97%;
@@ -535,225 +327,67 @@ header a span{
     text-overflow:ellipsis;
     overflow:hidden;
 }
-.mainer3_four ul li a:hover{
+.mainer6_four ul li a:hover{
     text-decoration: none;
 }
-[data-dpr="2"] .mainer3_four ul li a{
+[data-dpr="2"] .mainer6_four ul li a{
     font-size: 32px;
 }
-[data-dpr="3"] .mainer3_four ul li a{
+[data-dpr="3"] .mainer6_four ul li a{
     font-size: 48px;
 }
-/*mainer4部分*/
-.mainer4{
-    width: 10rem;
-    margin-bottom: 0.5rem;
-}
-/*mainer4_one部分*/
-.mainer4_one .left1{
-    width: 1rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    left: 0;
-    top: 0.4rem;
-}
-.mainer4_one .right1{
-    width: 1rem;
-    height: 0.05rem;
-    background:#000;
-    position: absolute;
-    right: 0;
-    top: 0.4rem;
-}
-.mainer4_one h1{
-    font-size: 30px;
-    font-weight:bold;
-}
-[data-dpr="2"] .mainer4_one h1{
-    font-size: 60px;
-}
-[data-dpr="3"] .mainer4_one h1{
-    font-size: 90px;
-}
-.mainer4_one h1.shop{
-    position: absolute;
-    left: 1.2rem;
-    top: 0;
-    height: 0.9rem;
-}
-.mainer4_one h1.open{
-    position: absolute;
-    right: 1.2rem;
-    top: 0.05rem;
-    height: 0.9rem;
-}
-.mainer4_one h1.open span{
-    color:#e00c09;
-}
-.mainer4_one img{
-    position: absolute;
-    left: 5.05rem;
-    top: 0.35rem;
-    width: 0.15rem;
-    height: 0.15rem;
-}
-[data-dpr="2"] .mainer4_one img{
-    font-size: 12px;
-}
-[data-dpr="3"] .mainer4_one img{
-    font-size: 18px;
-}
-/*mainer4_two部分*/
-.mainer4_two{
-    padding:0.25rem 0.25rem 0;
-}
-.mainer4_two ul li{
-    padding:0.25rem 0;
-    height: 3rem;
-    border-bottom: 1px solid #dfdfdf;
-}
-.mainer4_two ul li.nan{
-    padding:0.25rem 0;
-    height: 2.5rem;
-    border-bottom: 1px solid #dfdfdf;
-}
-.mainer4_left{
-    float: left;
-    width: 32%;
-    max-height: 2.5rem;
-    overflow:hidden;
-}
-.mainer4_left a{
-    display: block;
-    width: 100%;
-}
-.mainer4_left a img{
-    width: 100%;
-}
-.mainer4_right{
-    width: 66%;
-    float: right;
-}
-.mainer4_top{
-    height: 1.5rem;
-    line-height: 0.75rem;
-    margin-top: 0.15rem;
-}
-.mainer4_top a{
-    color: #222222;
-    font-size: 16px;
-}
-[data-dpr="2"] .mainer4_top a{
-    font-size: 28px;
-}
-[data-dpr="3"] .mainer4_top a{
-    font-size: 48px;
-}
-.mainer4_top a:hover{
-    text-decoration: none;
-}
-.mainer4_bottom{
-    height: 0.5rem;
-    margin-top: 0.15rem;
-}
-.mainer4_bottom p{
-    color: #999999;
-}
-.mainer4_left1{
-    float: left;
-    width: 32%;
-    max-height: 2.5rem;
-    overflow:hidden;
-}
-.mainer4_left1 a{
-    display: block;
-    width: 100%;
-}
-.mainer4_left1 a img{
-    width: 100%;
-}
-.mainer4_right1{
-    width: 66%;
-    float: right;
-}
-.mainer4_top1{
-    height: 1rem;
-    line-height: 0.5rem;
-    margin-top: 0.15rem;
-}
-.mainer4_top1 a{
-    color: #222222;
-    font-size: 16px;
-}
-[data-dpr="2"] .mainer4_top1 a{
-    font-size: 28px;
-}
-[data-dpr="3"] .mainer4_top1 a{
-    font-size: 48px;
-}
-.mainer4_top1 a:hover{
-    text-decoration: none;
-}
-.mainer4_bottom1{
-    height: 0.5rem;
-    margin-top: 0.15rem;
-}
-.mainer4_bottom1 p{
-    color: #999999;
-}
-/*mainer5部分*/
-.mainer5{
+/*mainer7部分*/
+.mainer7{
     width: 100%;
     background: #0b0b14;
     color: #555;
 }
-/*mainer5_one部分*/
-.mainer5_one{
+/*mainer7_one部分*/
+.mainer7_one{
     width: 100%;
     border-bottom:1px solid #555;
     margin-bottom: 0.4rem;
 }
-.mainer5_one_one{
+.mainer7_one_one{
     width: 80%;
     margin:0.2rem auto;
 }
-.mainer5_one_one ul{
+.mainer7_one_one ul{
     width: 100%;
 }
-.mainer5_one_one ul li{
+.mainer7_one_one ul li{
     float: left;
     width: 33%;
     height: 2rem;
     line-height: 1rem;
     text-align: center;
 }
-.mainer5_one_one ul li a{
+.mainer7_one_one ul li a{
     display: block;
     height: 2rem;
     color: #555;
     position: relative;
 }
-.mainer5_one_one ul li a span{
+.mainer7_one_one ul li a span{
     font-size: 0.9rem;
 }
-.mainer5_one_one ul li a span.icon-denglu-huiyuan{
+.mainer7_one_one ul li a span.fa-weibo{
     position: absolute;
     left: 0.88rem;
     top: 0.15rem;
 }
-.mainer5_one_one ul li a span.icon-weixingongzhonghao{
+.mainer7_one_one ul li a span.icon-weixingongzhonghao{
     position: absolute;
     left: 0.78rem;
     top: 0.15rem;
 }
-.mainer5_one_one ul li a span.icon-lianxiwomen{
+.mainer7_one_one ul li a span.icon-lianxiwomen{
     position: absolute;
     left: 0.88rem;
     top: 0.15rem;
 }
-/*mainer5_two部分*/
-.mainer5_two{
+/*mainer7_two部分*/
+.mainer7_two{
     padding-bottom: 0.5rem;
     text-align: center;
 }
@@ -804,85 +438,84 @@ header a span{
 /*第二页*/
 /*header1部分*/
 .header1_father{
-    width: 10rem;
-    margin:0 auto;
-    padding:0 0.17rem;
-    height: 0.95rem;
+    height: 1.3rem;
 }
 .header1{
-    width: 10rem;
-    height: 0.95rem;
-    padding:0.15rem 0;
+    width: 100%;
+    height: 1.5rem;
+    line-height: 1.2rem;
     background: #fff;
     position: fixed;
-    z-index:1000;
+    border-bottom: 0.25rem solid #f6f6f6;
+    z-index: 1000;
 }
-.header1 a{
+.header1 ul{
+    height: 1.3rem;
+    border-bottom: 1px solid #ddd;
+}
+.header1 li{
+    float: left;
+    width: 25%;
+    text-align: center;
     font-size: 16px;
-    color: #515151;
-    font-weight:bold;
-    border-left:0.125rem solid #ff6600;
-    padding-left: 0.15rem;
+    cursor:pointer;
 }
-[data-dpr="2"] .header1 a{
+[data-dpr="2"] .header1 li{
     font-size: 32px;
 }
-[data-dpr="3"] .header1 a{
+[data-dpr="3"] .header1 li{
     font-size: 48px;
 }
-.header1 a span{
-    margin-left: 0.4rem;
-    font-weight:normal;
-    color: #c6c6c6;
+.header1 li a{
+    color: #000000;
+    position: relative;
 }
-/*main部分*/
-.max{
-    padding:0 0.17rem;
-    background: #f5f5f5;
+.header1 li a.active{
+    color: #ff0b13;
 }
-.main{
-    width: 9.66rem;
+.header1 li a em{
+    background: url("../img/em.png");
+    width: 0.3rem;
+    height: 0.175rem;
+    display: inline-block;
+    background-size:0.3rem 0.2rem;
+    position: absolute;
+    top: 0.3rem;
+    left: 1.1rem;
+}
+.header1 li a em.em{
+    position: absolute;
+    top: 0.3rem;
+    left: 2.1rem;
+}
+/*shop部分*/
+.shop{
+    width: 10rem;
     margin:0 auto;
-    padding-bottom: 0.4rem;
 }
-.main dl{
-    width: 4.7rem;
+.shop img{
+    width: 100%;
+}
+.shop .shop_one{
+    border-bottom: 0.3rem solid #f2f2f2;
+}
+.shop .shop_one .shop_one_bottom{
+    padding: 0.25rem 0 0 0.1rem;
+    height: 1.7rem;
+}
+.shop .shop_one .shop_one_bottom dl{
+    width: 100%;
+    height: 0.825rem;
+}
+.shop .shop_one .shop_one_bottom dl dt{
+    width: 31%;
     float: left;
-    background: #fff;
-    margin-bottom: 0.2rem;
-    padding-bottom: 0.4rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
-.main dl.no{
-    float: right;
-}
-.main dl dt{
-    width: 100%;
-    padding-bottom: 0.06rem;
-}
-.main dl dt img{
-    width: 100%;
-}
-.main dl dd{
-    font-size: 14px;
-    color: #3c3c3c;
-    padding-left: 0.1rem;
-    padding-top: 0.15rem;
-}
-[data-dpr="2"] .main dl dd{
-    font-size: 28px;
-}
-[data-dpr="3"] .main dl dd{
-    font-size: 42px;
-}
-.main dl dd.fg{
-    font-size: 12px;
-    color:#585858;
-}
-[data-dpr="2"] .main dl dd.fg{
-    font-size: 24px;
-}
-[data-dpr="3"] .main dl dd.fg{
-    font-size: 36px;
+.shop .shop_one .shop_one_bottom dl dt.left{
+    width: 37%;
 }
 /*第三页*/
 /*header2部分*/
